# chessp

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py  utils.py
src/classes/: board.py  game.py  pieces.py
tests/: board_test.py  game_test.py  pieces_test.py  utils_test.py
