[tool.poetry]
name = "chessp"
version = "0.1.0"
description = "Chess game implemented in Python"
authors = ["danczw <dev.dc@pm.me>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
pytest = "^7.2.0"
colorama = "^0.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
